--- a/src/studentmanage/MainForm.form
+++ b/src/studentmanage/MainForm.form
@@ -157,6 +157,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Bienvenue&lt;****&gt;"/>
           </Properties>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
+          </AuxValues>
         </Component>
         <Container class="javax.swing.JPanel" name="jPanel3">
           <Properties>
