--- a/src/studentmanage/AddStudentForm.form
+++ b/src/studentmanage/AddStudentForm.form
@@ -56,9 +56,9 @@
                       <Group type="102" alignment="0" attributes="0">
                           <Component id="jLabel3" min="-2" pref="51" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
-                          <Component id="jRadioButtonMale" min="-2" pref="62" max="-2" attributes="0"/>
+                          <Component id="jRadioButtonFemale" min="-2" pref="62" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
-                          <Component id="jRadioButtonFemale" min="-2" max="-2" attributes="0"/>
+                          <Component id="jRadioButtonMale" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
                           <Group type="102" alignment="0" attributes="0">
@@ -111,8 +111,8 @@
                   <EmptySpace min="-2" pref="46" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel3" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jRadioButtonMale" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jRadioButtonFemale" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jRadioButtonMale" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="50" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
@@ -215,17 +215,17 @@
             <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jTextField_PhoneKeyTyped"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JRadioButton" name="jRadioButtonMale">
+        <Component class="javax.swing.JRadioButton" name="jRadioButtonFemale">
           <Properties>
             <Property name="text" type="java.lang.String" value="Femme"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JRadioButton" name="jRadioButtonFemale">
+        <Component class="javax.swing.JRadioButton" name="jRadioButtonMale">
           <Properties>
             <Property name="text" type="java.lang.String" value="Homme"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jRadioButtonFemaleActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jRadioButtonMaleActionPerformed"/>
           </Events>
         </Component>
         <Component class="java.awt.TextArea" name="jtextArea_Address">
